--- a/LarsWM.Bar/MainWindow.xaml
+++ b/LarsWM.Bar/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+﻿<AppBarWindow
   x:Class="LarsWM.Bar.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,14 +6,10 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:local="clr-namespace:LarsWM.Bar"
   mc:Ignorable="d"
-  WindowStyle="None"
   ResizeMode="NoResize"
   Background="#101010"
   Title="LarsWMBar"
-  ShowInTaskbar="False"
-  Width="800"
-  Height="50"
-  Topmost="True">
+  DockedWidthOrHeight="50">
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="10" />
@@ -74,4 +70,4 @@
       </ItemsControl.ItemTemplate>
     </ItemsControl>
   </Grid>
-</Window>
+</AppBarWindow>
