--- a/LarsWM.Bar/MainWindow.xaml
+++ b/LarsWM.Bar/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<AppBarWindow
+﻿<local:AppBarWindow
   x:Class="LarsWM.Bar.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,6 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:local="clr-namespace:LarsWM.Bar"
   mc:Ignorable="d"
-  ResizeMode="NoResize"
   Background="#101010"
   Title="LarsWMBar"
   DockedWidthOrHeight="50">
@@ -70,4 +69,4 @@
       </ItemsControl.ItemTemplate>
     </ItemsControl>
   </Grid>
-</AppBarWindow>
+</local:AppBarWindow>
